--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,7 @@
 @import "normalize";
+@import "scaffolding";
+@import "variables";
+@import "blocks/page";
+@import "blocks/page-header";
+@import "blocks/page-main";
+@import "blocks/page-footer";
