--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,3 +5,8 @@
 @import "blocks/page-header";
 @import "blocks/page-main";
 @import "blocks/page-footer";
+@import "blocks/site-list";
+@import "blocks/intro";
+@import "blocks/button";
+@import "blocks/catalog";
+@import "blocks/program";
