--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,3 +10,7 @@
 @import "blocks/button";
 @import "blocks/catalog";
 @import "blocks/program";
+@import "blocks/about";
+@import "blocks/example";
+@import "blocks/contacts";
+@import "blocks/map";
